--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -1,46 +1,130 @@
 body{
 
-  background: rgba(255, 255, 255, 0.921);
-  margin: 0 auto;
+  background: linear-gradient(rgb(26, 0, 155), rgb(120, 0, 147));
   padding-left: 50px;
   padding-right: 50px;
   padding-bottom: 100px;
+  margin: 50px;
+
+  animation: glowing-shadow-body 3s infinite;
+
+  font-family: monospace;
+
+}
+
+button{
+
+  font-family: monospace;
+  color: rgb(110, 0, 194);
+  font-weight: bold;
+
+}
+
+button:hover{
+
+  color: rgb(36, 0, 64);
 
 }
 
 a {
+
   text-decoration: none;
-  color: rgb(255, 0, 0);
+  color: rgb(110, 0, 194);
+  font-weight: bold;
+
 }
 
 a:visited {
-  color: rgb(255, 0, 0);
+  color: rgb(110, 0, 194);
+  font-weight: bold;
+
 }
 
 a:hover{
 
-  color: rgb(0, 64, 255);
+  color: rgb(36, 0, 64);
 
 }
 
 .title{
 
-  font-size: 50px;
+  font-size: 80px;
+  color: rgb(212, 0, 255);
+  
+  text-shadow: 
+      3px -2px 0px rgb(0, 179, 255),
+      3px 2px 0px rgb(255, 0, 234);
 
 }
 
 .subTitle{
 
-  font-size: 40px;
+  font-size: 45px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
+  color: rgb(0, 24, 68);
+  background-color: rgb(200, 153, 244);
+  width: 100%;
+
+  animation: glowing-shadow-subtitle 3s infinite;
+
+  padding-top: 5px;
+  padding-bottom: 5px;
+
 }
 
-.just_text{
+.extraSpace {
 
-  font-size: 25px;
+  height: 100px;
 
 }
 
+@keyframes glowing-shadow-body {
+
+0% {
+  box-shadow: 
+    0 0 10px 10px rgb(70, 143, 253),
+    0 0 20px 15px rgb(117, 79, 252),
+    0 0 35px 20px rgb(153, 80, 254);
+}
+50% {
+  box-shadow: 
+    0 0 10px 10px rgba(70, 143, 253, 0.383),
+    0 0 20px 15px rgba(116, 79, 252, 0.335),
+    0 0 35px 20px rgba(152, 80, 254, 0.373);
+}
+100% {
+  box-shadow:
+    0 0 10px 10px rgb(70, 143, 253),
+    0 0 20px 15px rgb(117, 79, 252),
+    0 0 35px 20px rgb(153, 80, 254);
+}
+
+}
+
+
+@keyframes glowing-shadow-subtitle {
+
+0% {
+  box-shadow: 
+    0 0 5px 2px rgb(70, 143, 253),
+    0 0 10px 4px rgb(117, 79, 252),
+    0 0 15px 6px rgb(153, 80, 254);
+}
+50% {
+  box-shadow: 
+    0 0 5px 2px rgba(70, 143, 253, 0.383),
+    0 0 10px 4px rgba(116, 79, 252, 0.335),
+    0 0 15px 6px rgba(152, 80, 254, 0.373);
+}
+100% {
+  box-shadow:
+    0 0 5px 2px rgb(70, 143, 253),
+    0 0 10px 4px rgb(117, 79, 252),
+    0 0 15px 6px rgb(153, 80, 254);
+
+}
+
+}
