--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -1,6 +1,6 @@
 .projectOuterContainer{
 
-    background-color: rgb(136, 0, 255);
+    background-color: rgb(161, 53, 255);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
@@ -19,7 +19,7 @@
 .projectContainer{
 
     background-color: rgb(158, 250, 255);
-    padding: 20px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -28,6 +28,8 @@
     border-bottom: 8px solid black;
     border-top: 2px solid black;
     border-right: 2px solid black;
+
+    animation: glowing-shadow-body 3s infinite;
 
 }
 
@@ -38,8 +40,8 @@
 
     background-color: rgb(0, 179, 255);
 
-    border-left: 5px solid black;
-    border-bottom: 5px solid black;
+    border-left: 6px solid black;
+    border-bottom: 6px solid black;
     border-top: 0px solid black;
     border-right: 0px solid black;
 
@@ -47,8 +49,8 @@
 
 .projectButton:hover{
 
-    border-left: 8px solid rgb(0, 0, 0);
-    border-bottom: 8px solid black;
+    border-left: 9px solid rgb(0, 0, 0);
+    border-bottom: 9px solid black;
     border-top: 2px solid black;
     border-right: 2px solid black;
 
@@ -56,9 +58,25 @@
 
 .projectMediaContainer{
 
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+
+}
+
+
+.projectTitle{
+
+    font-size: 40px;
+    color: rgb(3, 0, 47);
+
     display: flex;
     flex-direction: column;
-    gap: 20px;
     align-items: center;
+}
 
+.projectText{
+
+    font-size: 25px;
+    color: rgb(3, 0, 47);
 }
