--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -1,65 +1,48 @@
-body{
-
+body {
   background: linear-gradient(rgb(26, 0, 155), rgb(120, 0, 147));
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 100px;
-  margin: 50px;
+  padding-left: 5vw;
+  padding-right: 5vw;
+  padding-bottom: 10vh;
+  margin: 5vw;
 
   animation: glowing-shadow-body 3s infinite;
-
   font-family: monospace;
-
 }
 
-button{
-
+button {
   font-family: monospace;
   color: rgb(110, 0, 194);
   font-weight: bold;
-
 }
 
-button:hover{
-
+button:hover {
   color: rgb(36, 0, 64);
-
 }
 
 a {
-
   text-decoration: none;
   color: rgb(110, 0, 194);
   font-weight: bold;
-
 }
 
 a:visited {
   color: rgb(110, 0, 194);
-  font-weight: bold;
-
 }
 
-a:hover{
-
+a:hover {
   color: rgb(36, 0, 64);
-
 }
 
-.title{
-
-  font-size: 80px;
+.title {
+  font-size: 6vw; /* Responsive font size */
   color: rgb(212, 0, 255);
-  
   text-shadow: 
-      3px -2px 0px rgb(0, 179, 255),
-      3px 2px 0px rgb(255, 0, 234);
-
+    3px -2px 0px rgb(0, 179, 255),
+    3px 2px 0px rgb(255, 0, 234);
 }
 
-.subTitle{
-
-  font-size: 45px;
+.subTitle {
+  font-size: 3.5vw; /* Responsive font size */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -69,62 +52,44 @@ a:hover{
   width: 100%;
 
   animation: glowing-shadow-subtitle 3s infinite;
-
-  padding-top: 5px;
-  padding-bottom: 5px;
-
+  padding: 0.5em 0;
 }
 
 .extraSpace {
-
-  height: 100px;
-
+  height: 10vh;
 }
 
-@keyframes glowing-shadow-body {
+/* Add responsiveness with media queries */
+@media (max-width: 768px) {
+  .title {
+    font-size: 10vw;
+    text-align: center;
+  }
 
-0% {
-  box-shadow: 
-    0 0 10px 10px rgb(70, 143, 253),
-    0 0 20px 15px rgb(117, 79, 252),
-    0 0 35px 20px rgb(153, 80, 254);
-}
-50% {
-  box-shadow: 
-    0 0 10px 10px rgba(70, 143, 253, 0.383),
-    0 0 20px 15px rgba(116, 79, 252, 0.335),
-    0 0 35px 20px rgba(152, 80, 254, 0.373);
-}
-100% {
-  box-shadow:
-    0 0 10px 10px rgb(70, 143, 253),
-    0 0 20px 15px rgb(117, 79, 252),
-    0 0 35px 20px rgb(153, 80, 254);
+  .subTitle {
+    font-size: 6vw;
+    padding: 1em;
+  }
+
+  body {
+    padding-left: 3vw;
+    padding-right: 3vw;
+    margin: 3vw;
+  }
 }
 
-}
+@media (max-width: 480px) {
+  .title {
+    font-size: 12vw;
+  }
 
+  .subTitle {
+    font-size: 7vw;
+  }
 
-@keyframes glowing-shadow-subtitle {
-
-0% {
-  box-shadow: 
-    0 0 5px 2px rgb(70, 143, 253),
-    0 0 10px 4px rgb(117, 79, 252),
-    0 0 15px 6px rgb(153, 80, 254);
-}
-50% {
-  box-shadow: 
-    0 0 5px 2px rgba(70, 143, 253, 0.383),
-    0 0 10px 4px rgba(116, 79, 252, 0.335),
-    0 0 15px 6px rgba(152, 80, 254, 0.373);
-}
-100% {
-  box-shadow:
-    0 0 5px 2px rgb(70, 143, 253),
-    0 0 10px 4px rgb(117, 79, 252),
-    0 0 15px 6px rgb(153, 80, 254);
-
-}
-
+  body {
+    padding-left: 2vw;
+    padding-right: 2vw;
+    margin: 2vw;
+  }
 }
