--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -1,47 +1,40 @@
-.contactContainer{
-
-    display: grid;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    
-    gap: 30px;
-
-
+.contactContainer {
+  display: flex;
+  flex-wrap: wrap; /* Allow boxes to wrap on smaller screens */
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 3vw;
+  padding: 2vw;
 }
 
-.contactBox{
+.contactBox {
+  width: 28vw;
+  min-width: 250px;
+  height: 25vh;
+  background-color: rgb(76, 253, 253);
 
-    width: 30vw;
-    background-color: rgb(76, 253, 253);
-    height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  font-size: 2.5vw;
 
-    font-size: 50px;
+  border-left: 0.8vw solid black;
+  border-bottom: 0.8vw solid black;
+  border-top: 0.2vw solid black;
+  border-right: 0.2vw solid black;
 
-    border-left: 8px solid black;
-    border-bottom: 8px solid black;
-    border-top: 2px solid black;
-    border-right: 2px solid black;
-
-    animation: glowing-shadow-body 4s infinite;
-
+  animation: glowing-shadow-body 4s infinite;
+  transition: all 0.3s ease;
 }
 
-.contactBox:hover{
+.contactBox:hover {
+  background-color: rgb(58, 201, 201);
 
-    width: 30vw;
-    background-color: rgb(58, 201, 201);
-    height: 300px;
-
-    border-left: 13px solid black;
-    border-bottom: 13px solid black;
-    border-top: 3px solid black;
-    border-right: 3px solid black;
-
-
+  border-left: 1.3vw solid black;
+  border-bottom: 1.3vw solid black;
+  border-top: 0.3vw solid black;
+  border-right: 0.3vw solid black;
 }
