--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -1,82 +1,66 @@
-.projectOuterContainer{
+.projectOuterContainer {
+  background-color: rgb(161, 53, 255);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 3vw;
+  padding: 5vw;
 
-    background-color: rgb(161, 53, 255);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 50px;
-    padding: 50px;
+  border-left: 1vw solid black;
+  border-bottom: 1vw solid black;
+  border-top: 0.5vw solid black;
+  border-right: 0.5vw solid black;
 
-    border-left: 10px solid black;
-    border-bottom: 10px solid black;
-    border-top: 5px solid black;
-    border-right: 5px solid black;
-
-    border-radius: 20px;
-
-
+  border-radius: 2vw;
 }
 
-.projectContainer{
+.projectContainer {
+  background-color: rgb(158, 250, 255);
+  padding: 2vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1vw;
 
-    background-color: rgb(158, 250, 255);
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  border-left: 0.8vw solid black;
+  border-bottom: 0.8vw solid black;
+  border-top: 0.2vw solid black;
+  border-right: 0.2vw solid black;
 
-    border-left: 8px solid black;
-    border-bottom: 8px solid black;
-    border-top: 2px solid black;
-    border-right: 2px solid black;
-
-    animation: glowing-shadow-body 3s infinite;
-
+  animation: glowing-shadow-body 3s infinite;
 }
 
-.projectButton{
+.projectButton {
+  font-size: 1.6vw;
+  padding: 2vw;
+  background-color: rgb(0, 179, 255);
 
-    font-size: 25px;
-    padding: 20px;
-
-    background-color: rgb(0, 179, 255);
-
-    border-left: 6px solid black;
-    border-bottom: 6px solid black;
-    border-top: 0px solid black;
-    border-right: 0px solid black;
-
+  border-left: 0.6vw solid black;
+  border-bottom: 0.6vw solid black;
+  border-top: 0px solid black;
+  border-right: 0px solid black;
 }
 
-.projectButton:hover{
-
-    border-left: 9px solid rgb(0, 0, 0);
-    border-bottom: 9px solid black;
-    border-top: 2px solid black;
-    border-right: 2px solid black;
-
+.projectButton:hover {
+  border-left: 0.9vw solid black;
+  border-bottom: 0.9vw solid black;
+  border-top: 0.2vw solid black;
+  border-right: 0.2vw solid black;
 }
 
-.projectMediaContainer{
-
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-
+.projectMediaContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 1vw;
 }
 
-
-.projectTitle{
-
-    font-size: 40px;
-    color: rgb(3, 0, 47);
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.projectTitle {
+  font-size: 3vw;
+  color: rgb(3, 0, 47);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.projectText{
-
-    font-size: 25px;
-    color: rgb(3, 0, 47);
+.projectText {
+  font-size: 1.8vw;
+  color: rgb(3, 0, 47);
 }
