--- a/Michelles_Portfolio/src/components/ProjectComponents/ArcadeMedia.css
+++ b/Michelles_Portfolio/src/components/ProjectComponents/ArcadeMedia.css
@@ -1,104 +1,120 @@
-.ArcadeMediaContainer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  font-weight: bold;
-  z-index: 1;
-  background-color: rgba(115, 0, 255, 0.541);
+.ArcadeMediaContainer{
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 5vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+    font-weight: bold;
+    z-index: 1;     
+    background-color: rgba(115, 0, 255, 0.541);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
 }
 
-.ArcadeMediaContentBox {
-  background-color: rgb(143, 234, 255);
-  padding: 4vw;
-  border-radius: 1vw;
+.ArcadeMediaContentBox{
 
-  border-left: 0.8vw solid black;
-  border-bottom: 0.8vw solid black;
-  border-top: 0.3vw solid black;
-  border-right: 0.3vw solid black;
+    background-color: rgb(143, 234, 255);
+    padding: 5vh;
+    
+    border-radius: 1vh;
+    border-left: 0.8vh solid black;
+    border-bottom: 0.8vh solid black;
+    border-top: 0.3vh solid black;
+    border-right: 0.3vh solid black;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 3vw;
-  max-width: 90vw;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 3vh;
+
 }
+
 
 .ArcadeVideoOuterContainer {
-  width: 100%;
-  max-width: 90vw;
-  display: flex;
-  flex-direction: row;
-  gap: 2vw;
-  overflow-x: auto;
-  padding: 2vw;
+    
+    width: 50vw;
+    display: flex;
+    flex-direction: row;
+    gap: 3vw;
+    overflow-x: auto;
+    padding: 3vh;
+
 }
 
 .ArcadeVideoContainer {
-  min-width: 250px;
-  flex: 0 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 1vw;
 
-  border-left: 0.8vw solid black;
-  border-bottom: 0.8vw solid black;
-  border-top: 0.3vw solid black;
-  border-right: 0.3vw solid black;
+    min-width: 20vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  background-color: rgb(237, 213, 255);
-  padding: 2vw;
-  gap: 2vw;
+    border-radius: 1vh;
+    border-left: 0.8vh solid black;
+    border-bottom: 0.8vh solid black;
+    border-top: 0.3vh solid black;
+    border-right: 0.3vh solid black;
+
+    background-color: rgb(221, 176, 255);
+    padding: 2vh;
+
+    gap: 2vh;
+
 }
 
-.viewVideoButton {
-  background-color: rgb(216, 100, 255);
-  padding: 1vw 2vw;
-  font-size: 1.8vw;
 
-  border-left: 0.5vw solid black;
-  border-bottom: 0.5vw solid black;
-  cursor: pointer;
+.viewVideoButton{
+
+    background-color: rgb(216, 100, 255);
+    padding: 1vh;
+    font-size: 3vh;
+
+    border-left: 0.5vh solid black; 
+    border-bottom: 0.5vh solid black; 
+
 }
 
-.viewVideoButton:hover {
-  background-color: rgb(148, 54, 255);
+.viewVideoButton:hover{
 
-  border-left: 0.7vw solid black;
-  border-bottom: 0.7vw solid black;
-  border-right: 0.2vw solid black;
-  border-top: 0.2vw solid black;
+    background-color: rgb(148, 54, 255);
+
+    border-left: 0.7vh solid black; 
+    border-bottom: 0.7vh solid black; 
+    border-right: 0.2vh solid black; 
+    border-top: 0.2vh solid black; 
+
 }
 
-.ArcadeImage {
-  width: 100%;
-  max-width: 300px;
-  height: auto;
+.ArcadeImage{
+
+    width: 17vw;
+
+    border-left: 0.5vh solid rgb(110, 0, 200); 
+    border-bottom: 0.5vh solid rgb(110, 0, 200);  
+    border-right: 0.5vh solid rgb(110, 0, 200);  
+    border-top: 0.5vh solid rgb(110, 0, 200);   
+
 }
 
-.closeButton {
-  font-size: 2vw;
-  background-color: rgb(194, 109, 255);
-  padding: 1vw 2vw;
+.closeButton{
 
-  border-left: 0.7vw solid black;
-  border-bottom: 0.7vw solid black;
-  cursor: pointer;
+    font-size: 3vh;
+    background-color: rgb(194, 109, 255);
+    padding: 1vh;
+
+    border-left: 0.7vh solid black; 
+    border-bottom: 0.7vh solid black; 
+
 }
 
-.ArcadeMediaText {
-  font-size: 3vw;
-  text-align: center;
-  word-wrap: break-word;
+.ArcadeMediaText{
+
+    font-size: 4vh;
+
 }
