--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -1,48 +1,66 @@
-body {
+body{
+
   background: linear-gradient(rgb(26, 0, 155), rgb(120, 0, 147));
   padding-left: 5vw;
   padding-right: 5vw;
   padding-bottom: 10vh;
-  margin: 5vw;
+  padding-top: 10vh;
+  margin: 2vw;
 
   animation: glowing-shadow-body 3s infinite;
+
   font-family: monospace;
+
 }
 
-button {
+button{
+
   font-family: monospace;
   color: rgb(110, 0, 194);
   font-weight: bold;
+
 }
 
-button:hover {
+button:hover{
+
   color: rgb(36, 0, 64);
+
 }
 
 a {
+
   text-decoration: none;
   color: rgb(110, 0, 194);
   font-weight: bold;
+
 }
 
 a:visited {
   color: rgb(110, 0, 194);
+  font-weight: bold;
+
 }
 
-a:hover {
+a:hover{
+
   color: rgb(36, 0, 64);
+
 }
 
-.title {
-  font-size: 6vw; /* Responsive font size */
+.title{
+
+  font-size: 9vh;
   color: rgb(212, 0, 255);
+  
   text-shadow: 
-    3px -2px 0px rgb(0, 179, 255),
-    3px 2px 0px rgb(255, 0, 234);
+      3px -2px 0px rgb(0, 179, 255),
+      3px 2px 0px rgb(255, 0, 234);
+
 }
 
-.subTitle {
-  font-size: 3.5vw; /* Responsive font size */
+.subTitle{
+
+  font-size: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,44 +70,61 @@ a:hover {
   width: 100%;
 
   animation: glowing-shadow-subtitle 3s infinite;
-  padding: 0.5em 0;
+
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+
 }
 
 .extraSpace {
+
   height: 10vh;
+
 }
 
-/* Add responsiveness with media queries */
-@media (max-width: 768px) {
-  .title {
-    font-size: 10vw;
-    text-align: center;
-  }
+@keyframes glowing-shadow-body {
 
-  .subTitle {
-    font-size: 6vw;
-    padding: 1em;
-  }
-
-  body {
-    padding-left: 3vw;
-    padding-right: 3vw;
-    margin: 3vw;
-  }
+0% {
+  box-shadow: 
+    0 0 1vh 1vh rgb(70, 143, 253),
+    0 0 2vh 1.5vh rgb(117, 79, 252),
+    0 0 3.5vh 2vh rgb(153, 80, 254);
+}
+50% {
+  box-shadow: 
+    0 0 1vh 1vh rgba(70, 143, 253, 0.383),
+    0 0 2vh 1.5vh rgba(116, 79, 252, 0.335),
+    0 0 3.5vh 2vh rgba(152, 80, 254, 0.373);
+}
+100% {
+  box-shadow:
+    0 0 1vh 1vh rgb(70, 143, 253),
+    0 0 2vh 1.5vh rgb(117, 79, 252),
+    0 0 3.5vh 2vh rgb(153, 80, 254);
 }
 
-@media (max-width: 480px) {
-  .title {
-    font-size: 12vw;
-  }
+}
 
-  .subTitle {
-    font-size: 7vw;
-  }
 
-  body {
-    padding-left: 2vw;
-    padding-right: 2vw;
-    margin: 2vw;
-  }
+@keyframes glowing-shadow-subtitle {
+
+0% {
+  box-shadow: 
+    0 0 0.5vh 0.2vh rgb(70, 143, 253),
+    0 0 1vh 0.4vh rgb(117, 79, 252),
+    0 0 1.5vh 0.6vh rgb(153, 80, 254);
+}
+50% {
+  box-shadow: 
+    0 0 0.5vh 0.2vh rgba(70, 143, 253, 0.383),
+    0 0 1vh 0.4vh rgba(116, 79, 252, 0.335),
+    0 0 1.5vh 0.6vh rgba(152, 80, 254, 0.373);
+}
+100% {
+  box-shadow:
+    0 0 0.5vh 0.2vh rgb(70, 143, 253),
+    0 0 1vh 0.4vh rgb(117, 79, 252),
+    0 0 1.5vh 0.6vh rgb(153, 80, 254);
+}
+
 }
