--- a/Michelles_Portfolio/src/components/Introduction.css
+++ b/Michelles_Portfolio/src/components/Introduction.css
@@ -1,42 +1,37 @@
-.introContainer {
+.introContainer{
+  
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10vh;
   gap: 2vh;
-  padding: 0 5vw;
+
 }
 
-.linkContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 4vw;
-  flex-wrap: wrap;
-  justify-content: center;
-}
+.introText{
 
-.introText {
-  font-size: 2vw;
+  font-size: 3vh;
   color: white;
-  text-align: center;
+
 }
 
-.resumeButton {
-  background-color: rgb(111, 255, 255);
-  font-size: 1.8vw;
-  padding: 1.5vw 3vw;
+.resumeButton{
 
-  border-left: 0.8vw solid black;
-  border-bottom: 0.8vw solid black;
-  border-top: 0.2vw solid black;
-  border-right: 0.2vw solid black;
+  background-color: rgb(111, 255, 255);
+  font-size: 3vh;
+  padding: 2vh;
+
+  border-left: 0.8vh solid black;
+  border-bottom: 0.8vh solid black;
+  border-top: 0.2vh solid black;
+  border-right: 0.2vh solid black;
 
   animation: glowing-shadow-subtitle 3s infinite;
-  cursor: pointer;
+
 }
 
-.resumeButton:hover {
+.resumeButton:hover{
+
   background-color: rgb(82, 93, 255);
   color: white;
+
 }
