--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -1,66 +1,82 @@
-.projectOuterContainer {
-  background-color: rgb(161, 53, 255);
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 3vw;
-  padding: 5vw;
+.projectOuterContainer{
 
-  border-left: 1vw solid black;
-  border-bottom: 1vw solid black;
-  border-top: 0.5vw solid black;
-  border-right: 0.5vw solid black;
+    background-color: rgb(161, 53, 255);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3vw;
+    padding: 5vh;
 
-  border-radius: 2vw;
+    border-left: 1vh solid black;
+    border-bottom: 1vh solid black;
+    border-top: 0.5vh solid black;
+    border-right: 0.5vh solid black;
+
+    border-radius: 2vw;
+
 }
 
-.projectContainer {
-  background-color: rgb(158, 250, 255);
-  padding: 2vw;
-  display: flex;
-  flex-direction: column;
-  gap: 1vw;
+.projectContainer{
 
-  border-left: 0.8vw solid black;
-  border-bottom: 0.8vw solid black;
-  border-top: 0.2vw solid black;
-  border-right: 0.2vw solid black;
+    background-color: rgb(158, 250, 255);
+    padding: 3vh;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
 
-  animation: glowing-shadow-body 3s infinite;
+    border-left: 0.8vh solid black;
+    border-bottom: 0.8vh solid black;
+    border-top: 0.2vh solid black;
+    border-right: 0.2vh solid black;
+
+    animation: glowing-shadow-body 3s infinite;
+
 }
 
-.projectButton {
-  font-size: 1.6vw;
-  padding: 2vw;
-  background-color: rgb(0, 179, 255);
+.projectButton{
 
-  border-left: 0.6vw solid black;
-  border-bottom: 0.6vw solid black;
-  border-top: 0px solid black;
-  border-right: 0px solid black;
+    font-size: 2.5vh;
+    padding: 1.5vh;
+
+    background-color: rgb(0, 179, 255);
+
+    border-left: 0.6vh solid black;
+    border-bottom: 0.6vh solid black;
+    border-top: 0vh solid black;
+    border-right: 0vh solid black;
+
 }
 
-.projectButton:hover {
-  border-left: 0.9vw solid black;
-  border-bottom: 0.9vw solid black;
-  border-top: 0.2vw solid black;
-  border-right: 0.2vw solid black;
+.projectButton:hover{
+
+    border-left: 0.9vh solid black;
+    border-bottom: 0.9vh solid black;
+    border-top: 0.2vh solid black;
+    border-right: 0.2vh solid black;
+
 }
 
-.projectMediaContainer {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 1vw;
+.projectMediaContainer{
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1vh;
+
 }
 
-.projectTitle {
-  font-size: 3vw;
-  color: rgb(3, 0, 47);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+.projectTitle{
+
+    font-size: 4vh;
+    color: rgb(3, 0, 47);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
-.projectText {
-  font-size: 1.8vw;
-  color: rgb(3, 0, 47);
+.projectText{
+
+    font-size: 2.5vh;
+    color: rgb(3, 0, 47);
 }
