--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -1,6 +1,6 @@
 .projectOuterContainer{
 
-    background-color: rgb(184, 103, 255);
+    background-color: rgb(176, 118, 253);
 
     border-left: 1vh solid black;
     border-bottom: 1vh solid black;
@@ -37,7 +37,7 @@
     border-top: 0.2vh solid black;
     border-right: 0.2vh solid black;
 
-    animation: glowing-shadow-body 3s infinite;
+    animation: glowing-shadow-components 3s infinite;
 
 }
 
