--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -50,7 +50,7 @@ a:hover{
 
 .title{
 
-  font-size: 9vh;
+  font-size: clamp(3rem, 9vh, 5rem);
   color: rgb(212, 0, 255);
   
   text-shadow: 
@@ -61,7 +61,7 @@ a:hover{
 
 .subTitle{
 
-  font-size: 5vh;
+  font-size: clamp(1.8rem, 5vh, 3rem);
   display: flex;
   flex-direction: column;
   align-items: center;
