--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: center;
 
-    font-size: 5vh;
+    font-size: clamp(1.8rem, 5vh, 3rem);
 
     border-left: 0.9vh solid black;
     border-bottom: 0.9vh solid black;
