--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -43,7 +43,7 @@
 
 .projectButton{
 
-    font-size: 2.5vh;
+    font-size: clamp(1rem, 2.5vh, 1.75rem);
     padding: 1.5vh;
 
     background-color: rgb(0, 179, 255);
@@ -77,7 +77,7 @@
 
 .projectTitle{
 
-    font-size: 4vh;
+    font-size: clamp(1.5rem, 4vh, 2.5rem);
     color: rgb(3, 0, 47);
 
     display: flex;
@@ -88,6 +88,7 @@
 
 .projectText{
 
-    font-size: 2.5vh;
+    font-size: clamp(1rem, 2.5vh, 1.5rem);
     color: rgb(3, 0, 47);
+    
 }
