--- a/Michelles_Portfolio/src/components/Skills.css
+++ b/Michelles_Portfolio/src/components/Skills.css
@@ -12,7 +12,7 @@
     flex-direction: row;
     align-items: center;
     
-    font-size: 3vh;
+    font-size: clamp(1.2rem, 3vh, 2rem);
     gap: 3vw;
 
     color: white;
