--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -1,12 +1,10 @@
 .contactContainer{
 
-    display: grid;
     display: flex;
     flex-direction: row;
     align-items: center;
     
     gap: 4vh;
-
 
 }
 
@@ -28,7 +26,7 @@
     border-top: 0.2vh solid black;
     border-right: 0.2vh solid black;
 
-    animation: glowing-shadow-body 4s infinite;
+    animation: glowing-shadow-components 4s infinite;
 
 }
 
@@ -41,5 +39,45 @@
     border-top: 0.3vh solid black;
     border-right: 0.3vh solid black;
 
+
+}
+
+
+
+@media (max-width: 1000px) {
+
+    .contactContainer{
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        overflow-x: auto;
+        
+        gap: 4vh;
+        padding: 5vh;
+
+    }
+
+    .contactBox{
+
+        min-width: 50vw;
+        background-color: rgb(155, 218, 218);
+        height: 30vh;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        font-size: clamp(1.5rem, 1vh, 3rem);
+
+        border-left: 0.9vh solid black;
+        border-bottom: 0.9vh solid black;
+        border-top: 0.2vh solid black;
+        border-right: 0.2vh solid black;
+
+        animation: glowing-shadow-components-mobile 4s infinite;
+
+    }
 
 }
