--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -92,3 +92,76 @@
     color: rgb(3, 0, 47);
     
 }
+
+
+
+/* Mobile adjustments */
+@media (max-width: 1000px) {
+    
+    .projectInnerContainer {
+        display: flex;
+        flex-direction: column;
+        gap: 4vh;
+        padding: 5vh 5vw;
+    }
+
+    .projectOuterContainer {
+        border-left: 0.5vh solid black;
+        border-bottom: 0.5vh solid black;
+        border-top: 0.3vh solid black;
+        border-right: 0.3vh solid black;
+        padding: 1vh;
+        border-radius: 3vw;
+    }
+
+    .projectContainer{
+
+        background-color: rgb(184, 225, 254);
+        min-width: 30vw;
+        padding: 4vh;
+        display: flex;
+        flex-direction: column;
+        gap: 1vh;
+
+        border-left: 0.8vh solid black;
+        border-bottom: 0.8vh solid black;
+        border-top: 0.2vh solid black;
+        border-right: 0.2vh solid black;
+
+        animation: glowing-shadow-components-mobile 3s infinite;
+
+    }
+
+    .projectTitle{
+
+        font-size: clamp(1.5rem, 3vh, 2.5rem);
+        color: rgb(3, 0, 47);
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .projectText{
+
+        font-size: clamp(1rem, 2vh, 1.5rem);
+        color: rgb(3, 0, 47);
+        
+    }
+
+    .projectButton{
+
+        font-size: clamp(1rem, 2vh, 1.75rem);
+        padding: 1.5vh;
+
+        background-color: rgb(0, 179, 255);
+
+        border-left: 0.6vh solid black;
+        border-bottom: 0.6vh solid black;
+        border-top: 0vh solid black;
+        border-right: 0vh solid black;
+
+    }
+
+}
