--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -1,13 +1,20 @@
+.contactWrapper {
+    display: flex;
+    justify-content: center; /* centers the scrollable container */
+    overflow-x: hidden;      /* hides overflow outside the wrapper */
+}
+
 .contactContainer {
     
     display: flex;
     flex-direction: row;
     align-items: center;
-    overflow-x: auto;
     justify-content: start;
+    overflow-x: auto;
     gap: 3vh;
-    padding: 4vh 4vw;
+    padding: 5vh 5vw;
     box-sizing: border-box;
+    
 }
 
 .contactBox{
@@ -47,67 +54,12 @@
 
 @media (max-width: 1000px) {
 
-    .contactContainer {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        overflow-x: auto;
-        justify-content: start; /* ← better for scrollable rows */
-        gap: 3vh;
-        padding: 5vh 5vw; /* ← gives horizontal padding */
-        box-sizing: border-box;
-    }
-
-    .contactBox{
-
-        background-color: rgb(155, 218, 218);
-        min-width: 30vw;
-        height: 30vw;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        font-size: clamp(1rem, 3vh, 2rem);
-
-        border-left: 0.6vh solid black;
-        border-bottom: 0.6vh solid black;
-        border-top: 0.2vh solid black;
-        border-right: 0.2vh solid black;
-
-        animation: glowing-shadow-components-mobile 4s infinite;
-        padding: 1vh;
-
-    }
-
-    .contactBox:hover{
-
-        background-color: rgb(58, 201, 201);
-
-        border-left: 1vh solid black;
-        border-bottom: 1vh solid black;
-        border-top: 0.3vh solid black;
-        border-right: 0.3vh solid black;
-
-    }
-
-}
-
-
-
-@media (max-width: 600px) {
-
     .contactContainer{
 
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
-        overflow-x: auto;
-        justify-content: start;
-        
-        gap: 2.5vh;
-        padding: 5vh 5vw;
+        gap: 5vh;
 
     }
 
@@ -122,15 +74,14 @@
         align-items: center;
         justify-content: center;
 
-        font-size: clamp(1.2rem, 1vh, 3rem);
+        font-size: clamp(1.2rem, 2.5vh, 3rem);
 
-        border-left: 0.5vh solid black;
-        border-bottom: 0.5vh solid black;
+        border-left: 0.8vh solid black;
+        border-bottom: 0.8vh solid black;
         border-top: 0.2vh solid black;
         border-right: 0.2vh solid black;
 
         animation: glowing-shadow-components-mobile 4s infinite;
-        padding: 1vh;
 
     }
 
@@ -138,8 +89,8 @@
 
         background-color: rgb(58, 201, 201);
 
-        border-left: 1vh solid black;
-        border-bottom: 1vh solid black;
+        border-left: 1.1vh solid black;
+        border-bottom: 1.1vh solid black;
         border-top: 0.3vh solid black;
         border-right: 0.3vh solid black;
 
