--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -1,5 +1,9 @@
 .projectOuterContainer{
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     background-color: rgb(176, 118, 253);
 
     border-left: 1vh solid black;
@@ -9,33 +13,54 @@
 
     border-radius: 2vw;
     padding: 3vh;
+    gap: 3vh;
 
 }
 
-.projectInnerContainer {
+
+.cardCarouselButtonContainer{
 
     display: flex;
     flex-direction: row;
-    overflow-x: auto;
-    gap: 3vw;
-    padding: 5vh;
+    justify-content: center;
+    gap: 5vw;
 
+}
+
+.cardCarouselButton{
+
+    font-size: clamp(1rem, 3vh, 1.5rem);
+    background-color: aqua;
+    padding: 1vh;
+
+    border-left: 0.5vh solid black;
+    border-bottom: 0.5vh solid black;
+    border-top: 0.1vh solid black;
+    border-right: 0.1vh solid black;
+    
+}
+
+.cardCarouselButton:hover{
+
+    background-color: rgb(0, 81, 255);
+    color: white;
+
+    border-left: 0.7vh solid black;
+    border-bottom: 0.7vh solid black;
+    border-top: 0.2vh solid black;
+    border-right: 0.2vh solid black;
+    
 }
 
 
 .projectContainer{
 
     background-color: rgb(184, 225, 254);
-    min-width: 30vw;
-    padding: 4vh;
+    padding: 3vh;
+    gap:1vh;
     display: flex;
     flex-direction: column;
-    gap: 1vh;
-
-    border-left: 0.8vh solid black;
-    border-bottom: 0.8vh solid black;
-    border-top: 0.2vh solid black;
-    border-right: 0.2vh solid black;
+    align-items: center;
 
     animation: glowing-shadow-components 3s infinite;
 
@@ -69,7 +94,6 @@
     display: flex;
     flex-direction: row;
     overflow-x: auto;
-
     gap: 2vh;
 
 }
@@ -93,41 +117,39 @@
     
 }
 
+.projectImage {
 
+    max-width: 30vw;
+
+    border-left: 0.6vh solid rgb(153, 0, 255);
+    border-bottom: 0.6vh solid rgb(153, 0, 255);
+    border-top: 0.6vh solid rgb(225, 0, 255);
+    border-right: 0.6vh solid rgb(225, 0, 255);
+
+}
 
 /* Mobile adjustments */
 @media (max-width: 1000px) {
 
     .projectOuterContainer {
+
         border-left: 0.5vh solid black;
         border-bottom: 0.5vh solid black;
         border-top: 0.3vh solid black;
         border-right: 0.3vh solid black;
-        padding: 0.5vh;
-        border-radius: 3vw;
+        padding: 2.5vh;
+        border-radius: 2vw;
+
     }
     
-    .projectInnerContainer {
-        display: flex;
-        flex-direction: column;
-        gap: 4vh;
-        padding: 5vh 5vw;
-    }
-
     .projectContainer{
 
         background-color: rgb(184, 225, 254);
-        min-width: 30vw;
-        padding: 2vh;
         display: flex;
         flex-direction: column;
-        gap: 0vh;
-
-        border-left: 0.8vh solid black;
-        border-bottom: 0.8vh solid black;
-        border-top: 0.2vh solid black;
-        border-right: 0.2vh solid black;
-
+        align-items: center;
+        padding: 1vh;
+        gap:1vh;
         animation: glowing-shadow-components-mobile 3s infinite;
 
     }
@@ -150,6 +172,18 @@
         
     }
 
+    .projectMediaContainer{
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow-x: auto;
+
+        gap: 2vh;
+
+    }
+
     .projectButton{
 
         font-size: clamp(0.5rem, 1vh, 1.75rem);
@@ -170,6 +204,42 @@
         border-bottom: 0.6vh solid black;
         border-top: 0.1vh solid black;
         border-right: 0.1vh solid black;
+
+    }
+
+    .cardCarouselButton{
+
+        font-size: clamp(1rem, 3vh, 1.5rem);
+        background-color: aqua;
+        padding: 1vh;
+
+        border-left: 0.4vh solid black;
+        border-bottom: 0.4vh solid black;
+        border-top: 0.1vh solid black;
+        border-right: 0.1vh solid black;
+        
+    }
+
+    .cardCarouselButton:hover{
+
+        background-color: rgb(0, 81, 255);
+        color: white;
+
+        border-left: 0.6vh solid black;
+        border-bottom: 0.6vh solid black;
+        border-top: 0.2vh solid black;
+        border-right: 0.2vh solid black;
+        
+    }
+
+    .projectImage {
+
+        max-width: 40vw;
+
+        border-left: 0.5vh solid rgb(153, 0, 255);
+        border-bottom: 0.5vh solid rgb(153, 0, 255);
+        border-top: 0.5vh solid rgb(225, 0, 255);
+        border-right: 0.5vh solid rgb(225, 0, 255);
 
     }
 
