--- a/Michelles_Portfolio/src/components/Contact.css
+++ b/Michelles_Portfolio/src/components/Contact.css
@@ -20,15 +20,15 @@
 .contactBox{
 
     background-color: rgb(155, 218, 218);
-    min-width: 20vw;
-    height: 20vw;
+    min-width: 15vw;
+    height: 15vw;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    font-size: clamp(1.8rem, 5vh, 3rem);
+    font-size: clamp(1.4rem, 4vh, 2.2rem);
 
     border-left: 0.8vh solid black;
     border-bottom: 0.8vh solid black;
@@ -51,6 +51,12 @@
 
 }
 
+.contactImage{
+
+    max-width: 10vw;
+
+}
+
 
 @media (max-width: 1000px) {
 
@@ -59,14 +65,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 5vh;
+        gap: 4vh;
 
     }
 
     .contactBox{
 
-        min-width: 30vw;
-        height: 30vw;
+        min-width: 25vw;
+        height: 25vw;
         background-color: rgb(155, 218, 218);
 
         display: flex;
@@ -74,7 +80,7 @@
         align-items: center;
         justify-content: center;
 
-        font-size: clamp(1.2rem, 2.5vh, 3rem);
+        font-size: clamp(1rem, 2vh, 2.4rem);
 
         border-left: 0.8vh solid black;
         border-bottom: 0.8vh solid black;
@@ -96,5 +102,10 @@
 
     }
 
+    .contactImage{
+
+        max-width: 20vw;
+
+    }
 
 }
