--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -13,10 +13,6 @@ body{
 
 }
 
-
-
-
-
 button{
 
   font-family: monospace;
@@ -57,8 +53,9 @@ a:hover{
   color: rgb(212, 0, 255);
   
   text-shadow: 
-      3px -2px 0px rgb(0, 179, 255),
-      3px 2px 0px rgb(255, 0, 234);
+    0.3vw -0.25vh 0px rgb(0, 179, 255),
+    0vw 0.2vh 0px rgb(255, 0, 234);
+
 
 }
 
@@ -248,12 +245,14 @@ a:hover{
 
   .title{
 
-    font-size: clamp(3rem, 7vh, 5rem);
+    font-size: clamp(2.5rem, 6vh, 4.5rem);
+
     color: rgb(212, 0, 255);
     
     text-shadow: 
-        3px -2px 0px rgb(0, 179, 255),
-        3px 2px 0px rgb(255, 0, 234);
+        0.4vw -0.25vh 0px rgb(0, 179, 255),
+        0vw 0.2vh 0px rgb(255, 0, 234);
+
 
   }
 
