--- a/Michelles_Portfolio/src/components/Introduction.css
+++ b/Michelles_Portfolio/src/components/Introduction.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2vh;
+  width: 100%; /* Add this */
 
 }
 
@@ -36,6 +37,12 @@
 
 }
 
+.horizontalLine {
+  height: 0.2vh;
+  background-color: #ff00ff;
+  width: 100%;
+  box-shadow: 0px -2px 0px rgb(0, 179, 255);
+}
 
 /* Mobile adjustments */
 @media (max-width: 1000px) {
