--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -12,7 +12,7 @@
     border-right: 0.5vh solid black;
 
     border-radius: 2vw;
-    padding: 3vh;
+    padding: 5vh;
     gap: 3vh;
 
 }
@@ -29,9 +29,9 @@
 
 .cardCarouselButton{
 
-    font-size: clamp(1rem, 3vh, 1.5rem);
+    font-size: clamp(1.7rem, 5vh, 3rem);
     background-color: aqua;
-    padding: 1vh;
+    padding: 1.5vh;
 
     border-left: 0.5vh solid black;
     border-bottom: 0.5vh solid black;
@@ -101,7 +101,8 @@
 
 .projectTitle{
 
-    font-size: clamp(1.5rem, 4vh, 2.5rem);
+    font-size: clamp(1.6rem, 4.25vh, 2.75rem);
+
     color: rgb(3, 0, 47);
 
     display: flex;
@@ -113,18 +114,27 @@
 .projectText{
 
     font-size: clamp(1rem, 2.5vh, 1.5rem);
+    font-size: clamp(1.2rem, 3vh, 2rem);
     color: rgb(3, 0, 47);
     
 }
 
 .projectImage {
 
-    max-width: 30vw;
+    max-width: 15vw;
 
     border-left: 0.6vh solid rgb(153, 0, 255);
     border-bottom: 0.6vh solid rgb(153, 0, 255);
     border-top: 0.6vh solid rgb(225, 0, 255);
     border-right: 0.6vh solid rgb(225, 0, 255);
+
+}
+
+.horizontalLineProject{
+
+    height: 0.20vh;
+    background-color: #000322;
+    width: 80%;
 
 }
 
@@ -179,7 +189,6 @@
         justify-content: center;
         align-items: center;
         overflow-x: auto;
-
         gap: 2vh;
 
     }
@@ -213,8 +222,8 @@
         background-color: aqua;
         padding: 1vh;
 
-        border-left: 0.4vh solid black;
-        border-bottom: 0.4vh solid black;
+        border-left: 0.5vh solid black;
+        border-bottom: 0.5vh solid black;
         border-top: 0.1vh solid black;
         border-right: 0.1vh solid black;
         
@@ -225,8 +234,8 @@
         background-color: rgb(0, 81, 255);
         color: white;
 
-        border-left: 0.6vh solid black;
-        border-bottom: 0.6vh solid black;
+        border-left: 0.7vh solid black;
+        border-bottom: 0.7vh solid black;
         border-top: 0.2vh solid black;
         border-right: 0.2vh solid black;
         
@@ -234,7 +243,7 @@
 
     .projectImage {
 
-        max-width: 40vw;
+        max-width: 30vw;
 
         border-left: 0.5vh solid rgb(153, 0, 255);
         border-bottom: 0.5vh solid rgb(153, 0, 255);
@@ -243,5 +252,12 @@
 
     }
 
+    .horizontalLineProject{
+
+        height: 0.15vh;
+        background-color: #000322;
+        width: 80%;
+
+    }
 
 }
