--- a/Michelles_Portfolio/src/components/Projects.css
+++ b/Michelles_Portfolio/src/components/Projects.css
@@ -15,6 +15,9 @@
     padding: 5vh;
     gap: 3vh;
 
+    max-width: 80%;
+    justify-self: center;
+
 }
 
 
@@ -141,6 +144,7 @@
         border-bottom: 0.5vh solid black;
         border-top: 0.3vh solid black;
         border-right: 0.3vh solid black;
+        
         padding: 2.5vh;
         border-radius: 2vw;
 
